Bug #7689
Comment typos and formatting fixes in NFSv4 client sources
Start date:
2016-12-24
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
This is to fix:
- few typos in comments in the NFSv4 client sources,
- formatting issues in
nfs4_client_state.c
as reported bygit pbchk
, - extra parameter name in the
nfs4_find_sysid()
function declaration, - an indentation issue in
nfs4_frlock()
, - obsolete comments mentioning
saved_rqstpp
andsaved_rqstp
, - confusing comment in
nfs4frlock_setup_locku_args()
related tolocktype
, - obsolete
F_O_GETLK
is removed fromnfs4frlock()
since thecmd
cannot have such value there.
Updated by Electric Monk about 4 years ago
- Status changed from Pending RTI to Closed
- % Done changed from 0 to 100
git commit 957f6e722ed34de1328d9a8ce2c1932fd21f8c85
commit 957f6e722ed34de1328d9a8ce2c1932fd21f8c85 Author: Marcel Telka <marcel@telka.sk> Date: 2017-01-02T23:58:24.000Z 7689 Comment typos and formatting fixes in NFSv4 client sources Reviewed by: Adam Števko <adam.stevko@gmail.com> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Approved by: Robert Mustacchi <rm@joyent.com>