7689 Comment typos and formatting fixes in NFSv4 client sources Reviewed by: Adam Števko <adam.stevko@gmail.com> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Approved by: Robert Mustacchi <rm@joyent.com>